# Multi-Agents-Simulation-Powered-by-LLMs

./: .gitignore  README.md  agent.py  cli.py  example_1.py  example_2.py  example_comms.py  example_food_qna.py  message.py  pyproject.toml  requirements.txt  sim.py
backends/: openai_backend.py
environments/: conversation.py
examples/: composition_tasks_zh_CN.json  example_composition_tasks_en_US.py  example_composition_tasks_zh_CN.py  example_food_qna_en_US.py  example_food_qna_zh_CN.py  food_qna_zh_CN.json
