[tool.poetry]
name = "agent-based-conversation-sim"
version = "0.1.0"
description = ""
authors = ["bearbearyu1223 <bearbearyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "0.0.225"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
